--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1 class="gamer-cat">!!GAMER CAAAAAAAAT!!</h1>
+    <div class="cat_box">
+        <div class="cat_1"> </div>
+        <div class="cat_2"> </div>
+    </div>
     <div class="robot">
-        <div class="ear_BOX">
-            <div class="ear"></div>
-            <div class="ear"></div>
-        </div>
-        <div class="head">
-            <div class="eye-BOX">
-                <div class="eye"></div>
-                <div class="eye"></div>
+        <div class="head-main_box">
+            <div class="ear_BOX">
+                <div class="ear"></div>
+                <div class="ear"></div>
             </div>
-            <div class="nose"></div>
-            <div class="mouth"></div>
+            <div class="head">
+                <div class="eye-BOX">
+                    <div class="eye"></div>
+                    <div class="eye"></div>
+                </div>
+                <div class="nose"></div>
+                <div class="mouth"></div>
+            </div>
         </div>
-
         <div class="body_BOX">
             <div class="arm-left"></div>
             <div class="body">
